# service/Service.AspNetCore/WebAPIEndpoints.cs
@@ -20,6 +20,7 @@ using Microsoft.KernelMemory.Diagnostics;
 using Microsoft.KernelMemory.DocumentStorage;
 using Microsoft.KernelMemory.HTTP;
 using Microsoft.KernelMemory.Service.AspNetCore.Models;
+using Microsoft.OpenApi.Models;
 
 namespace Microsoft.KernelMemory.Service.AspNetCore;
 
@@ -108,7 +109,63 @@ public static class WebAPIEndpoints
             .WithName("UploadDocument")
             .WithDisplayName("UploadDocument")
             .WithDescription("Upload a new document to the knowledge base and extract memories from it.")
-            .WithSummary("Upload a document to the knowledge base and extract memories from it. If a document with the same ID already exists, it will be overwritten and the memories previously extracted will be updated. Note: a document can contain multiple files.")
+            .WithOpenApi(
+                operation =>
+                {
+                    operation.RequestBody = new OpenApiRequestBody
+                    {
+                        Content =
+                        {
+                            ["multipart/form-data"] = new OpenApiMediaType
+                            {
+                                Schema = new OpenApiSchema
+                                {
+                                    Type = "object",
+                                    Properties =
+                                    {
+                                        ["index"] = new OpenApiSchema
+                                        {
+                                            Type = "string",
+                                            Description = "Name of the index where to store memories generated by the files."
+                                        },
+                                        ["documentId"] = new OpenApiSchema
+                                        {
+                                            Type = "string",
+                                            Description = "Unique ID used for import pipeline and document ID."
+                                        },
+                                        ["tags"] = new OpenApiSchema
+                                        {
+                                            Type = "object",
+                                            AdditionalProperties = new OpenApiSchema { Type = "string" },
+                                            Description = "Tags to apply to the memories extracted from the files."
+                                        },
+                                        ["steps"] = new OpenApiSchema
+                                        {
+                                            Type = "array",
+                                            Items = new OpenApiSchema { Type = "string" },
+                                            Description = "How to process the files, e.g. how to extract/chunk etc."
+                                        },
+                                        ["files"] = new OpenApiSchema
+                                        {
+                                            Type = "array",
+                                            Items = new OpenApiSchema
+                                            {
+                                                Type = "string",
+                                                Format = "binary"
+                                            },
+                                            Description = "Files to process and extract memories from."
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        Description = "Document to upload and extract memories from"
+                    };
+                    operation.Summary = "Upload a new document to the knowledge base";
+                    operation.Description = "Upload a document consisting of one or more files to extract memories from. The extraction process happens asynchronously.";
+                    return operation;
+                }
+            )
             .Produces<UploadAccepted>(StatusCodes.Status202Accepted)
             .Produces<ProblemDetails>(StatusCodes.Status400BadRequest)
             .Produces<ProblemDetails>(StatusCodes.Status401Unauthorized)
