# swagger.json
@@ -94,9 +94,51 @@
         "tags": [
           "Microsoft.KernelMemory.ServiceAssembly"
         ],
-        "summary": "Upload a document to the knowledge base and extract memories from it. If a document with the same ID already exists, it will be overwritten and the memories previously extracted will be updated. Note: a document can contain multiple files.",
-        "description": "Upload a new document to the knowledge base and extract memories from it.",
+        "summary": "Upload a new document to the knowledge base",
+        "description": "Upload a document consisting of one or more files to extract memories from. The extraction process happens asynchronously.",
         "operationId": "UploadDocument",
+        "requestBody": {
+          "description": "Document to upload and extract memories from",
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "index": {
+                    "type": "string",
+                    "description": "Name of the index where to store memories generated by the files."
+                  },
+                  "documentId": {
+                    "type": "string",
+                    "description": "Unique ID used for import pipeline and document ID."
+                  },
+                  "tags": {
+                    "type": "object",
+                    "additionalProperties": {
+                      "type": "string"
+                    },
+                    "description": "Tags to apply to the memories extracted from the files."
+                  },
+                  "steps": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    },
+                    "description": "How to process the files, e.g. how to extract/chunk etc."
+                  },
+                  "files": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    },
+                    "description": "Files to process and extract memories from."
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "202": {
             "description": "Accepted",
@@ -669,6 +711,13 @@
             "type": "string",
             "nullable": true
           },
+          "tokenUsage": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TokenUsage"
+            },
+            "nullable": true
+          },
           "relevantSources": {
             "type": "array",
             "items": {
@@ -855,6 +904,53 @@
         ],
         "type": "string"
       },
+      "TokenUsage": {
+        "type": "object",
+        "properties": {
+          "timestamp": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "serviceType": {
+            "type": "string",
+            "nullable": true
+          },
+          "modelType": {
+            "type": "string",
+            "nullable": true
+          },
+          "modelName": {
+            "type": "string",
+            "nullable": true
+          },
+          "tokenizerTokensIn": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "tokenizerTokensOut": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "serviceTokensIn": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "serviceTokensOut": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "serviceReasoningTokens": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "UploadAccepted": {
         "type": "object",
         "properties": {
@@ -873,6 +969,19 @@
         },
         "additionalProperties": false
       }
+    },
+    "securitySchemes": {
+      "auth": {
+        "type": "apiKey",
+        "description": "The API key to access the API",
+        "name": "Authorization",
+        "in": "header"
+      }
     }
-  }
+  },
+  "security": [
+    {
+      "auth": []
+    }
+  ]
 }
